--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
     "require-dev": {
         "drupal/devel": "^1.0"
     },
+    "require": {
+        "drupal/admin_toolbar": "^1.0",
+        "drupal/adminimal_theme": "^1.0",
+        "drupal/adminimal_admin_toolbar": "^1.0"
+    },
     "repositories": [
         {
             "type": "composer",
