--- a/draft.info.yml
+++ b/draft.info.yml
@@ -9,7 +9,10 @@ distribution:
 # Required modules
 dependencies:
   # core
+  - block
+  - dynamic_page_cache
   - config
+  - page_cache
   # contrib
   - admin_toolbar
   - adminimal_admin_toolbar
