--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "drupal/admin_toolbar": "^1.0",
         "drupal/adminimal_theme": "^1.0",
-        "drupal/adminimal_admin_toolbar": "^1.0"
+        "drupal/adminimal_admin_toolbar": "^1.0",
+        "drupal/config_filter": "^1.0",
+        "drupal/config_split": "^1.0"
     },
     "repositories": [
         {
