--- a/draft.info.yml
+++ b/draft.info.yml
@@ -1,8 +1,8 @@
 name: Draft
 core: 8.x
 type: profile
-description: 'Draft handcrafted Drupal.'
-version: '8.x-1.0.0'
+description: Draft handcrafted Drupal.
+version: 8.x-1.x.x
 distribution:
   name: Draft
 
