--- a/draft.info.yml
+++ b/draft.info.yml
@@ -14,6 +14,7 @@ dependencies:
   - drupal:config
   - drupal:page_cache
   # contrib
+  - admin_links_access_filter:admin_links_access_filter
   - admin_toolbar:admin_toolbar
   - adminimal_admin_toolbar:adminimal_admin_toolbar
 
