Add dependency on Configuration Split module; empty Develop configuration split

--- a/draft.info.yml
+++ b/draft.info.yml
@@ -17,6 +17,7 @@ dependencies:
   - admin_links_access_filter:admin_links_access_filter
   - admin_toolbar:admin_toolbar
   - adminimal_admin_toolbar:adminimal_admin_toolbar
+  - config_split:config_split
 
 themes:
   - adminimal_theme:adminimal_theme
