--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "drupal/admin_links_access_filter": "^1.0",
         "drupal/admin_toolbar": "^1.0",
         "drupal/adminimal_admin_toolbar": "^1.0",
-        "drupal/adminimal_theme": "^1.0"
+        "drupal/adminimal_theme": "^1.0",
+        "drupal/config_split": "^1.0"
     },
     "repositories": [
         {
