Resolve #7: Enable basic core modules and add develop modules for config split

--- a/config/install/config_split.config_split.develop.yml
+++ b/config/install/config_split.config_split.develop.yml
@@ -3,8 +3,11 @@ status: true
 dependencies: {  }
 id: develop
 label: Develop
+description: ''
 folder: ../config/develop
-module: {  }
+module:
+  field_ui: 0
+  views_ui: 0
 theme: {  }
 blacklist: {  }
 graylist: {  }
