--- a/draft.info.yml
+++ b/draft.info.yml
@@ -10,9 +10,22 @@ distribution:
 dependencies:
   # Core
   - drupal:block
-  - drupal:dynamic_page_cache
+  - drupal:ckeditor
   - drupal:config
+  - drupal:dynamic_page_cache
+  - drupal:editor
+  - drupal:field
+  - drupal:link
+  - drupal:media
+  - drupal:menu_link_content
+  - drupal:menu_ui
+  - drupal:node
+  - drupal:options
   - drupal:page_cache
+  - drupal:path
+  - drupal:text
+  - drupal:user
+  - drupal:views
   # Contrib
   - admin_toolbar:admin_toolbar
   - admin_toolbar:admin_toolbar_links_access_filter
