#7 Add Update and Dblog modules to config split, update dependencies

--- a/config/install/config_split.config_split.develop.yml
+++ b/config/install/config_split.config_split.develop.yml
@@ -6,7 +6,9 @@ label: Develop
 description: ''
 folder: ../config/develop
 module:
+  dblog: 0
   field_ui: 0
+  update: 0
   views_ui: 0
 theme: {  }
 blacklist: {  }
