#6 Enable Media Library module. Update configuration for Image media type

--- a/config/install/core.entity_view_display.media.image.media_library.yml
+++ b/config/install/core.entity_view_display.media.image.media_library.yml
@@ -2,26 +2,28 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.media_library
     - field.field.media.image.field_media_image
+    - image.style.medium
     - media.type.image
   module:
     - image
-id: media.image.default
+id: media.image.media_library
 targetEntityType: media
 bundle: image
-mode: default
+mode: media_library
 content:
-  field_media_image:
+  thumbnail:
+    type: image
     weight: 0
+    region: content
     label: hidden
     settings:
-      image_style: ''
+      image_style: medium
       image_link: ''
     third_party_settings: {  }
-    type: image
-    region: content
 hidden:
   created: true
+  field_media_image: true
   name: true
-  thumbnail: true
   uid: true
