#6 Add media bundle for Icon. Enable Svg Image module

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "drupal/adminimal_theme": "^1.0",
         "drupal/config_split": "^1.0",
         "drupal/paragraphs": "^1.6",
+        "drupal/svg_image": "^1.9",
         "drupal/twig_field_value": "^1.2",
         "drupal/twig_tweak": "^2.1"
     },
