--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "drupal/adminimal_admin_toolbar": "^1.0",
         "drupal/adminimal_theme": "^1.0",
         "drupal/config_split": "^1.0",
-        "drupal/twig_field_value": "^1.2",
         "drupal/paragraphs": "^1.6",
+        "drupal/twig_field_value": "^1.2",
         "drupal/twig_tweak": "^2.1"
     },
     "require-dev": {
@@ -25,6 +25,7 @@
         }
     ],
     "config": {
-        "bin-dir": "bin/"
+        "bin-dir": "bin/",
+        "sort-packages": true
     }
 }
