--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "drupal/admin_toolbar": "^1.21",
         "drupal/adminimal_admin_toolbar": "^1.0",
         "drupal/adminimal_theme": "^1.0",
+        "drupal/allowed_formats":  "^1.1",
         "drupal/config_split": "^1.0",
         "drupal/paragraphs": "^1.6",
         "drupal/twig_field_value": "^1.2",
