--- a/draft.info.yml
+++ b/draft.info.yml
@@ -42,6 +42,7 @@ dependencies:
   # issue will be committed.
   - config_filter:config_filter
 install:
+  - allowed_formats
   - paragraphs
   - twig_field_value
   - twig_tweak
