#34 Add Paragraphs browser module

--- a/draft.info.yml
+++ b/draft.info.yml
@@ -43,6 +43,7 @@ dependencies:
   - config_filter:config_filter
 install:
   - paragraphs
+  - paragraphs_browser
   - twig_field_value
   - twig_tweak
 themes:
