--- a/draft.info.yml
+++ b/draft.info.yml
@@ -45,6 +45,7 @@ dependencies:
   - config_filter:config_filter
 install:
   - paragraphs
+  - svg_image
   - twig_field_value
   - twig_tweak
 themes:
