--- a/config/install/field.field.media.file.field_media_file.yml
+++ b/config/install/field.field.media.file.field_media_file.yml
@@ -18,7 +18,7 @@ default_value: {  }
 default_value_callback: ''
 settings:
   file_extensions: 'txt doc docx pdf'
-  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_directory: 'media/file/[date:custom:Y]-[date:custom:m]'
   max_filesize: ''
   description_field: false
   handler: 'default:file'
