--- a/config/install/field.field.media.image.field_media_image.yml
+++ b/config/install/field.field.media.image.field_media_image.yml
@@ -17,7 +17,7 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_extensions: 'png gif jpg jpeg'
+  file_extensions: 'jpg jpeg'
   alt_field: true
   alt_field_required: true
   title_field: false
@@ -30,8 +30,8 @@ settings:
     title: ''
     width: null
     height: null
-  file_directory: '[date:custom:Y]-[date:custom:m]'
-  max_filesize: ''
+  file_directory: 'media/image/[date:custom:Y]-[date:custom:m]'
+  max_filesize: 8MB
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
