--- a/config/optional/field.field.media.icon.field_media_image.yml
+++ b/config/optional/field.field.media.icon.field_media_image.yml
@@ -17,10 +17,10 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_directory: 'media/icon/[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png svg'
-  max_filesize: ''
-  max_resolution: 128x128
+  max_filesize: 4MB
+  max_resolution: ''
   min_resolution: 32x32
   alt_field: true
   alt_field_required: true
