--- a/config/install/media.type.image.yml
+++ b/config/install/media.type.image.yml
@@ -3,7 +3,7 @@ status: true
 dependencies: {  }
 id: image
 label: Image
-description: ''
+description: 'Use local images for reusable media.'
 source: image
 queue_thumbnail_downloads: false
 new_revision: false
