--- a/config/optional/core.entity_view_display.paragraph.simple_content.default.yml
+++ b/config/optional/core.entity_view_display.paragraph.simple_content.default.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.simple_content.field_body
-    - field.field.paragraph.simple_content.field_title
+    - field.field.paragraph.simple_content.field_heading
     - paragraphs.paragraphs_type.simple_content
   module:
     - text
@@ -19,7 +19,7 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_title:
+  field_heading:
     weight: 0
     label: hidden
     settings:
