--- a/config/optional/field.storage.paragraph.field_heading.yml
+++ b/config/optional/field.storage.paragraph.field_heading.yml
@@ -3,8 +3,8 @@ status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_title
-field_name: field_title
+id: paragraph.field_heading
+field_name: field_heading
 entity_type: paragraph
 type: string
 settings:
