--- a/config/optional/core.entity_view_display.paragraph.simple_content.preview.yml
+++ b/config/optional/core.entity_view_display.paragraph.simple_content.preview.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.simple_content.field_body
+    - field.field.paragraph.simple_content.field_description
     - field.field.paragraph.simple_content.field_heading
     - paragraphs.paragraphs_type.simple_content
   module:
@@ -13,7 +13,7 @@ targetEntityType: paragraph
 bundle: simple_content
 mode: preview
 content:
-  field_body:
+  field_description:
     type: text_default
     weight: 1
     region: content
