--- a/config/optional/field.storage.paragraph.field_description.yml
+++ b/config/optional/field.storage.paragraph.field_description.yml
@@ -4,8 +4,8 @@ dependencies:
   module:
     - paragraphs
     - text
-id: paragraph.field_body
-field_name: field_body
+id: paragraph.field_description
+field_name: field_description
 entity_type: paragraph
 type: text_long
 settings: {  }
