--- a/config/optional/paragraphs_browser.paragraphs_browser_type.content.yml
+++ b/config/optional/paragraphs_browser.paragraphs_browser_type.content.yml
@@ -8,7 +8,7 @@ groups:
     label: Compound
     id: compound
     weight: '1'
-  banner:
+  hero:
     label: Hero
     id: hero
     weight: '2'
@@ -16,12 +16,16 @@ groups:
     label: Layout
     id: layout
     weight: '3'
+  link:
+    label: Link
+    id: link
+    weight: '4'
   reference:
     label: Reference
     id: reference
-    weight: '4'
+    weight: '5'
   simple:
     label: Simple
     id: simple
-    weight: '5'
+    weight: '6'
 map: {  }
