--- a/config/optional/paragraphs.paragraphs_type.simple_content.yml
+++ b/config/optional/paragraphs.paragraphs_type.simple_content.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: simple_content
 label: 'Simple - Content'
 icon_uuid: null
-description: 'Add simple component with title and body'
+description: 'Use to add Simple component with title and body'
 behavior_plugins: {  }
