--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "drupal/config_split": "^1.0",
         "drupal/environment_indicator": "^3.6",
         "drupal/field_group": "^1.0",
+        "drupal/focal_point": "^1.0",
         "drupal/paragraphs": "^1.6",
         "drupal/paragraphs_browser": "^1.0@alpha",
         "drupal/twig_field_value": "^1.2",
