#55 Add description and update settings for Link - Default and Link - File paragraphs

--- a/config/optional/paragraphs.paragraphs_type.link_file.yml
+++ b/config/optional/paragraphs.paragraphs_type.link_file.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: link_file
 label: 'Link - File'
 icon_uuid: null
-description: ''
+description: 'Use to add default File component'
 behavior_plugins: {  }
