--- a/config/optional/paragraphs.paragraphs_type.link_default.yml
+++ b/config/optional/paragraphs.paragraphs_type.link_default.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: link_default
 label: 'Link - Default'
 icon_uuid: null
-description: ''
+description: 'Use to add default Link component'
 behavior_plugins: {  }
