--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,12 @@
     "config": {
         "bin-dir": "bin/",
         "sort-packages": true
+    },
+    "extra": {
+        "patches": {
+            "drupal/core": {
+                "Notice: Array to string conversion in Drupal\\Component\\Render\\PlainTextOutput::renderFromHtml()": "https://www.drupal.org/files/issues/2018-11-08/2951547-3.patch"
+            }
+        }
     }
 }
