--- a/config/optional/paragraphs_browser.paragraphs_browser_type.content.yml
+++ b/config/optional/paragraphs_browser.paragraphs_browser_type.content.yml
@@ -20,17 +20,23 @@ groups:
     label: Link
     id: link
     weight: '4'
+  media:
+    label: Media
+    id: media
+    weight: '5'
   reference:
     label: Reference
     id: reference
-    weight: '5'
+    weight: '6'
   simple:
     label: Simple
     id: simple
-    weight: '6'
+    weight: '7'
 map:
   hero_basic: hero
   link_default: links
   link_file: links
   simple_content: simple
   simple_cta: simple
+  compound_media_bar: compound
+  media_image: media
