--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "extra": {
         "patches": {
             "drupal/core": {
-                "Notice: Array to string conversion in Drupal\\Component\\Render\\PlainTextOutput::renderFromHtml()": "https://www.drupal.org/files/issues/2018-11-08/2951547-3.patch"
+                "Notice: Array to string conversion in Drupal\\Component\\Render\\PlainTextOutput::renderFromHtml()": "https://www.drupal.org/files/issues/2018-11-08/2951547-3.patch",
+                "Media library widget + Paragraphs broken: validation error on required field in paragraphs subform": "https://www.drupal.org/files/issues/2018-12-05/drupal-media-library-paragraphs-3003150-19-8.x.patch"
             }
         }
     }
