--- a/draft.info.yml
+++ b/draft.info.yml
@@ -21,3 +21,6 @@ dependencies:
   # https://www.drupal.org/node/1253774 @endlink. Remove when the corresponding
   # issue will be committed.
   - config_filter:config_filter
+
+themes:
+  - claro
