--- a/draft.info.yml
+++ b/draft.info.yml
@@ -1,5 +1,5 @@
 name: Draft
-core: 8.x
+core_version_requirement: ^8.9 || ^9.0
 type: profile
 description: Draft handcrafted Drupal.
 version: 8.x-1.x.x
