--- a/draft.info.yml
+++ b/draft.info.yml
@@ -2,7 +2,7 @@ name: Draft
 core_version_requirement: ^8.9 || ^9.0
 type: profile
 description: Draft handcrafted Drupal.
-version: 8.x-1.x.x
+version: 1.4.0
 distribution:
   name: Draft
 
