--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "prefer-stable": true,
     "require": {
         "drupal/admin_toolbar": "^2.2",
-        "drupal/config_split": "^1.5"
+        "drupal/config_split": "^1.5",
+        "drupal/core-recommended": "^8.8 || ^9.0"
     },
     "repositories": [
         {
